--- a/index.css
+++ b/index.css
@@ -60,17 +60,37 @@ font-weight: 700;
     border: none;
     color: #FFF;
     text-align: center;
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: 600;
     padding: 20px 25px;
     cursor: pointer;
+    width: 180px;
   }
   .banner-img{
     margin-top: 30px;
     width: 100%;
   }
-  
+  main{
+    max-width: 1440px;
+    margin: 0px auto;
+  }
+  .team{
+    display: flex;
+    align-items: center;
+    margin-top: 60px;
     
+  }
+  .text-title{
+    width: 468px;
+  }
+  .description{
+    width: 537px;
+  }
+  .team-img{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+  }
   @media screen and (max-width: 576px) {
     header{
         padding: 20px;
@@ -78,4 +98,14 @@ font-weight: 700;
    nav{
     flex-direction: column;
    }
+  }
+  @media screen and (min-width: 576px) and (max-width: 960px) {
+    header{
+      padding: 50px;
+     
+    }
+    
+    nav{
+      flex-direction: column;
+    }
   }
